# alpheratz

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  manager
.github/workflows/: cmake-multi-platform.yml
cpp/alpheratz/common/: env.cpp  locale.cpp  resource_loader.cpp
cpp/alpheratz/compress/: zstd.cpp
cpp/alpheratz/conf/: yaml_conf.cpp
cpp/alpheratz/hash/: base64.cpp  md5.cpp  murmurhash3.cpp
cpp/alpheratz/io/: file_loader.cpp  fs.cpp  resource_guard.cpp
cpp/alpheratz/string/: byte_string.cpp  string_utils.cpp
cpp/alpheratz/time/: datetime.cpp
include/alpheratz/common/: env.h  locale.h  macro.h  resource_loader.h
include/alpheratz/compress/: zstd.h
include/alpheratz/conf/: ini_conf.h  yaml_conf.h
include/alpheratz/hash/: base64.h  md5.h  murmurhash3.h
include/alpheratz/io/: file_loader.h  file_utils.h  fs.h  resource_guard.h
include/alpheratz/memory/: alloc.h
include/alpheratz/string/: byte_string.h  string_utils.h
include/alpheratz/time/: datetime.h
tests/: tests_core_fs.cpp  tests_core_locale.cpp  tests_hash.cpp  tests_yaml.cpp  tests_zstd.cpp
tests/test_data/: config.yaml
